1. Создать меню. [#4748]